# rust-rocket-webapi

./: Cargo.toml  README.md
src/: main.rs  models.rs  routes.rs
